不要なコミットの削除

--- a/app/assets/stylesheets/config/_variable.scss
+++ b/app/assets/stylesheets/config/_variable.scss
@@ -16,10 +16,10 @@ $body_border_color: #fff;
 $body_backgroundcolor: #f6f6f6;
 
 
-// menber-color
+// member-color
 
-$menber_color: #fff;
-$menber_backgroundcolor: #6927FF;
+$member_color: #fff;
+$member_backgroundcolor: #6927FF;
 
 // group-color
 
