--- a/app/views/members/index.html.haml
+++ b/app/views/members/index.html.haml
@@ -1,28 +1,28 @@
 = render 'shared/header'
 .index
-  .menber-box
-    .menber-box__title
-      Menber Task list
-    .menber-contens
-      .menber-contens__name
+  .member-box
+    .member-box__title
+      Member Task list
+    .member-contens
+      .member-contens__name
         名前
-      .menber-contens__taskA
+      .member-contens__taskA
         taskA
-      .menber-contens__taskC
+      .member-contens__taskC
         taskC
-    .menber-contens
-      .menber-contens__name
+    .member-contens
+      .member-contens__name
         シンヤ
-      .menber-contens__taskA
+      .member-contens__taskA
         設計変更
-      .menber-contens__taskC
+      .member-contens__taskC
         内容変更
-    .menber-contens
-      .menber-contens__name
+    .member-contens
+      .member-contens__name
         タカシ
-      .menber-contens__taskA
+      .member-contens__taskA
         現場調査
-      .menber-contens__taskC
+      .member-contens__taskC
         図面作成
   .group-box
     .group-box__title
