--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,7 +1,13 @@
 .header
   .header__title
     Working!
-  .header__login
-    = link_to "ログイン"
-  .header__new
-    = link_to "新規登録"
+  - if member_signed_in?
+    .header__login
+      = link_to "ログアウト",destroy_member_session_path,method: :delete
+    .header__new
+      = link_to "マイページ"
+  - else
+    .header__login
+      = link_to "ログイン" ,new_member_session_path
+    .header__new
+      = link_to "新規登録" ,new_member_registration_path
