タスク投稿機能の実装の修正

--- a/app/assets/stylesheets/modules/_info.scss
+++ b/app/assets/stylesheets/modules/_info.scss
@@ -18,9 +18,10 @@
   margin-left: 20px;
   margin-right: 20px;
   width:95vw;
+  height:18vh;
 
   .member-info{
-    height: 15vh;
+    height: 18vh;
     width: 320px;
     overflow: scroll;
     background-color: white;
@@ -40,11 +41,9 @@
     height: 15vh;
     overflow-x: scroll;
 
-  }
-    &__title{
-    }
-    &__list{
 
+    &__title{
+      font-weight: bold;
     }
   }
 
@@ -52,7 +51,7 @@
       color: #fb3f1e;
       list-style: none;
       display: inline-block;
-      width: 5%;
+      width: 5vw;
       min-width: 100px;
       border-right:2px solid #ddd;
       text-align: center;
@@ -66,3 +65,4 @@
     .h1{
       @include side_border();
     }
+}
